--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Supersocial/orion-vscode-extension"
+  },
   "contributes": {
     "commands": [
       {
