--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "Other"
   ],
   "activationEvents": [],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Supersocial/orion-vscode-extension"
